<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constrainedWidth="true"
    tools:context=".ui.home.HomeFragment">


    <!--    <TextView-->
    <!--        android:id="@+id/text_instructions"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:text="@string/text_instructions"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        android:src="@drawable/touming_icon"
        android:radius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100" />

    <TextView
        android:id="@+id/ADKiller"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/AD_Killer"
        android:textColor="@color/titleColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

<!--    <TextView-->
<!--        android:id="@+id/ADKiller"-->
<!--        android:layout_width="0dp"-->
<!--        android:textAlignment="center"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:text="@string/AD_Killer"-->
<!--        android:textSize="25sp"-->
<!--        app:layout_constraintEnd_toEndOf="@id/logo"-->
<!--        app:layout_constraintStart_toStartOf="@id/logo"-->
<!--        app:layout_constraintTop_toBottomOf="@id/logo" />-->

<!--    <Switch-->
<!--        android:id="@+id/s_v"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:switchMinWidth="20dp"-->
<!--        android:text="@string/serviceOpen"-->
<!--        android:checked="true"-->
<!--        android:textSize="15sp"-->
<!--        android:thumb="@drawable/thumb"-->
<!--        android:track="@drawable/track"-->
<!--        app:layout_constraintEnd_toEndOf="@id/logo"-->
<!--        app:layout_constraintStart_toStartOf="@id/logo"-->
<!--        app:layout_constraintTop_toBottomOf="@id/ADKiller" />-->

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="200dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ADKiller">

        <TableRow
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/beijing">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_accessibility_permission2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.15" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_accessibility_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.85" />

                <TextView
                    android:id="@+id/text_accessibility_permission"
                    android:layout_width="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_accessibility_permission"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline_accessibility_permission"
                    app:layout_constraintStart_toStartOf="@id/guideline_accessibility_permission2"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/button_accessibility_permission"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shezhi"
                    android:padding="0dp"
                    android:text="@string/button_setting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline_accessibility_permission2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_accessibility_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wrong"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline_accessibility_permission"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>


        <TableRow
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/kong1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>


        <TableRow
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/beijing">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_power_permission2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.15" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_power_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.85" />

                <TextView
                    android:id="@+id/text_power_permission"
                    android:layout_width="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_power_permission"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline_power_permission"
                    app:layout_constraintStart_toStartOf="@id/guideline_power_permission2"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/button_power_permission"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shezhi"
                    android:padding="0dp"
                    android:text="@string/button_setting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline_power_permission2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_power_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wrong"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline_power_permission"
                    app:layout_constraintTop_toTopOf="parent" />

<!--                -->
<!--                <TextView-->
<!--                    android:id="@+id/text_power_permission"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="12dp"-->
<!--                    android:text="@string/text_power_permission"-->
<!--                    android:textSize="18sp"-->
<!--                    app:layout_constraintEnd_toStartOf="@id/guideline_power_permission"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <ImageButton-->
<!--                    android:id="@+id/button_power_permission"-->
<!--                    style="@style/Widget.AppCompat.Button.Small"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:layout_marginBottom="8dp"-->
<!--                    android:src="@drawable/ic_configuration"-->
<!--                    android:text="@string/button_setting"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/text_power_permission" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/image_power_permission"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:src="@drawable/ic_wrong"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="@+id/guideline_power_permission"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>



        <TableRow
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/kong2"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>


        <TableRow
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/beijing">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_taskmanager2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.15" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_taskmanager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="305dp" />

                <TextView
                    android:id="@+id/text_task_manager"
                    android:layout_width="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_task_manager"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline_taskmanager"
                    app:layout_constraintStart_toStartOf="@id/guideline_taskmanager2"
                    app:layout_constraintTop_toTopOf="parent" />


<!--                <TextView-->
<!--                    android:id="@+id/text_task_manager"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="12dp"-->
<!--                    android:text="@string/text_task_manager"-->
<!--                    android:textSize="18sp"-->
<!--                    app:layout_constraintEnd_toStartOf="@id/guideline_taskmanager"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

    </TableLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/tv_status_help"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:text="@string/text_status_help"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tablelayout" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/tv_status_weblink"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:autoLink="web"-->
    <!--        android:text="@string/text_status_weblink"-->
    <!--        android:textSize="16sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tv_status_help" />-->





</androidx.constraintlayout.widget.ConstraintLayout>